deployment/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: asgard-gateway
  labels:
    app: asgard-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: asgard-gateway
  template:
    metadata:
      labels:
        app: asgard-gateway
    spec:
      containers:
        - name: asgard-gateway
          command:
            - /app/bootstrap.sh
            - --conf=/app/config/config.json
          image: registry.digitalocean.com/francisco/asgard-gateway:20230607202253
          resources: {}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: asgard-gateway-config
              mountPath: /app/config
      volumes:
        - name: asgard-gateway-config
          configMap:
            name: asgard-gateway-conf
