deployment/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asgard-gateway-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: ai.sakurain.io
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: asgard-gateway-svc
                port:
                  number: 8080
